<resources>
    <string name="app_name">SHOWDOWN</string>
    <string name="login_bg">LOGIN</string>
    <string name="signup_bg">SIGNUP</string>

    <string name="email_tag">Email:</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_tag">Password:</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_btn">Login</string>
    <string name="new_tag">New to Here? </string>
    <string name="ask_signup_tag"> Sign Up Now</string>

    <string name="username_tag">Username:</string>
    <string name="username_hint">Enter Username</string>
    <string name="cfm_password_tag">Confirm Password:</string>
    <string name="cfm_password_hint">Enter Confirm Password</string>

    <string name="register_btn">Register Account</string>
    <string name="have_acc">Already have an account? </string>
    <string name="ask_login_tag"> Log In Here</string>

    <string name="nav_main">Home</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_profile">Profile</string>

    <string name="select_month">October 2025</string>
    <string name="selected_date">23</string>
    <string name="selected_month">October 2025</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thurs</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

</resources>