<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/secondary_light">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Background Text -->
        <TextView
            android:id="@+id/background_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:layout_marginTop="-80sp"
            android:layout_marginStart="-18sp"
            android:fontFamily="@font/NATS_Regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="0sp"
            android:text="@string/signup_bg"
            android:textColor="@color/white_faded"
            android:textSize="149sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:layout_marginTop="-140sp"
            android:layout_marginStart="-18sp"
            android:fontFamily="@font/NATS_Regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="0sp"
            android:text="@string/signup_bg"
            android:textColor="@color/white_faded"
            android:textSize="149sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/NATS_Regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:singleLine="false"
            android:layout_marginTop="-100sp"
            android:layout_marginStart="-18sp"
            android:padding="0sp"
            android:text="@string/signup_bg"
            android:textColor="@color/white_faded"
            android:textSize="149sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/NATS_Regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:singleLine="false"
            android:layout_marginTop="-130sp"
            android:layout_marginStart="-18sp"
            android:padding="0sp"
            android:text="@string/signup_bg"
            android:textColor="@color/white_faded"
            android:textSize="149sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/signup_rectangle_box"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="-10sp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:fontFamily="@font/Roboto_Condensed_ExtraBoldItalic"
            android:letterSpacing="0.05"
            android:gravity="center"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:paddingStart="80sp"
            android:text="@string/email_tag"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:background="@drawable/edittext_border"
            android:layout_marginTop="5sp"
            android:importantForAutofill="no"
            android:paddingStart="8sp"
            android:hint="@string/email_hint"
            android:fontFamily="@font/NATS_Regular"
            android:textColor="@color/white_faded"
            android:textSize="12sp"
            android:inputType="text"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:paddingStart="80sp"
            android:text="@string/email_tag"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:background="@drawable/edittext_border"
            android:layout_marginTop="5sp"
            android:importantForAutofill="no"
            android:paddingStart="8sp"
            android:hint="@string/email_hint"
            android:fontFamily="@font/NATS_Regular"
            android:textColor="@color/white_faded"
            android:textSize="12sp"
            android:inputType="text"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:paddingStart="80sp"
            android:text="@string/password_tag"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:background="@drawable/edittext_border"
            android:layout_marginTop="5sp"
            android:importantForAutofill="no"
            android:paddingStart="8sp"
            android:hint="@string/password_hint"
            android:fontFamily="@font/NATS_Regular"
            android:textColor="@color/white_faded"
            android:textSize="12sp"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:paddingStart="80sp"
            android:text="@string/cfm_password_tag"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:background="@drawable/edittext_border"
            android:layout_marginTop="5sp"
            android:importantForAutofill="no"
            android:paddingStart="8sp"
            android:hint="@string/cfm_password_hint"
            android:fontFamily="@font/NATS_Regular"
            android:textColor="@color/white_faded"
            android:textSize="12sp"
            android:inputType="text"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/NATS_Regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingTop="-10dp"
            android:paddingBottom="0dp"
            android:text="@string/register_btn"
            android:textColor="@color/primary_light"
            android:textSize="16sp" />

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Center Text -->
            <TextView
                android:id="@+id/new_here_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_acc"
                android:textSize="10sp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@id/sign_up_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_margin="8dp"
                tools:ignore="SmallSp" />

            <!-- Link Text -->
            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_login_tag"
                android:textSize="10sp"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:autoLink="web"
                app:layout_constraintTop_toBottomOf="@id/new_here_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SmallSp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>